[package]
name = "ffs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.3"
clap = { version = "4.5.57", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pem"] }
env_logger = "0.11.9"
log = "0.4.29"
wincode = { version = "0.3.1", features = ["derive"] }
